--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation files('src\\main\\java\\com\\example\\lpamvil\\sprint0laura\\activation.jar')
+    implementation files('src\\main\\java\\com\\example\\lpamvil\\sprint0laura\\additionnal.jar')
+    implementation files('src\\main\\java\\com\\example\\lpamvil\\sprint0laura\\mail.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
